--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "parcel-project-template",
+  "name": "weather-app",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://danretegan.github.io/weather-app",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /weather-app/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/danretegan/weather-app.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Dan Retegan <danretegan@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/danretegan/weather-app/issues"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001616",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
