--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-app",
-  "version": "2.0.0",
-  "description": "",
+  "version": "1.0.0",
+  "description": "This is a weather application that provides current weather conditions for a given location.",
   "homepage": "https://danretegan.github.io/weather-app",
   "scripts": {
     "start": "parcel src/*.html",
